--- a/components/backend-tests-go-rfyirdnm/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-rfyirdnm/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-rfyirdnm
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-rfyirdnm:1de8e2c0166876684438b17541cc30a8bd869556@sha256:b6e90d59f616b092c9d62dcd563e67eb9b67476e1607d46debdd15971a94a5ff
+          name: container-image
